// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile should show tile preview chart when that type is given 1`] = `
<pf-tile
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    id="test-tile-tile"
    ng-reflect-klass="tile m-0 p-1"
    ng-reflect-ng-class="test cssClass"
    ng-reflect-ng-switch="Chart"
  >
    <a
      class="tile-anchor-overlay"
      href="test tile url"
      id="test-tile-tile-link"
    />
    <h4>
      test tile
    </h4>
    
    <pf-tile-preview-chart />
    
    
    
    
  </div>
</pf-tile>
`;

exports[`Tile should show tile preview icon when that type is given 1`] = `
<pf-tile
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    id="test-tile-tile"
    ng-reflect-klass="tile m-0 p-1"
    ng-reflect-ng-class="test cssClass"
    ng-reflect-ng-switch="Icon"
  >
    <a
      class="tile-anchor-overlay"
      href="test tile url"
      id="test-tile-tile-link"
    />
    <h4>
      test tile
    </h4>
    
    
    <pf-tile-preview-icon />
    
    
    
  </div>
</pf-tile>
`;

exports[`Tile should show tile preview list when that type is given 1`] = `
<pf-tile
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    id="test-tile-tile"
    ng-reflect-klass="tile m-0 p-1"
    ng-reflect-ng-class="test cssClass"
    ng-reflect-ng-switch="List"
  >
    <a
      class="tile-anchor-overlay"
      href="test tile url"
      id="test-tile-tile-link"
    />
    <h4>
      test tile
    </h4>
    
    
    
    <pf-tile-preview-list />
    
    
  </div>
</pf-tile>
`;
